Fixed some styles of FeaturesSkeleton for too small media.

--- a/src/components/Skeleton/FeaturesSkeleton/styles.module.css
+++ b/src/components/Skeleton/FeaturesSkeleton/styles.module.css
@@ -159,7 +159,7 @@
   }
 }
 
-@media screen and (min-width: 286px) {
+@media screen and (min-width: 287px) {
   .paragraph:nth-child(6) .text:first-child {
     display: none;
   }
